manifests/k8s.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubytest
    role: web
  name: kubytest-svc
  namespace: kubytest-kingdonb
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: kubytest
    role: web
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    getkuby.io/dockerfile-checksum: 49602c374399cc5d74f824386d8e9984840f4ebae97ad78ff3ff46eb2854fe83
  labels:
    app: kubytest
    role: web
  name: kubytest-web
  namespace: kubytest-kingdonb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubytest
      role: web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kubytest
        role: web
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: kubytest-config
        - secretRef:
            name: kubytest-secrets
        image: ghcr.io/kingdonb/kuby-tester:20211217164810
        imagePullPolicy: IfNotPresent
        name: kubytest-web
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: "/healthz"
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
      imagePullSecrets:
      - name: kubytest-registry-secret
      restartPolicy: Always
      serviceAccountName: kubytest-sa
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/generate-host: "true"
  name: kubytest-ingress
  namespace: kubytest-kingdonb
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kubytest-svc
            port:
              number: 8080
        path: "/"
        pathType: Prefix
  - http:
      paths:
      - backend:
          service:
            name: kubytest-assets-svc
            port:
              number: 8082
        path: "/assets"
      - backend:
          service:
            name: kubytest-assets-svc
            port:
              number: 8082
        path: "/packs"
  tls:
  - hosts:
    - kuby-test.hephy.pro
    secretName: kubytest-tls
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubytest
    role: assets
  name: kubytest-assets-svc
  namespace: kubytest-kingdonb
spec:
  ports:
  - name: http
    port: 8082
    protocol: TCP
    targetPort: http
  selector:
    app: kubytest
    role: assets
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kubytest
    role: assets
  name: kubytest-assets
  namespace: kubytest-kingdonb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubytest
      role: assets
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kubytest
        role: assets
    spec:
      containers:
      - image: ghcr.io/kingdonb/kuby-tester:20211217164810-assets
        imagePullPolicy: IfNotPresent
        name: kubytest-assets
        ports:
        - containerPort: 8082
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: "/500.html"
            port: 8082
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: "/etc/nginx/nginx.conf"
          name: nginx-config
          subPath: nginx.conf
      imagePullSecrets:
      - name: kubytest-registry-secret
      restartPolicy: Always
      serviceAccountName: kubytest-assets-sa
      volumes:
      - configMap:
          name: kubytest-assets-nginx-config
        name: nginx-config
